# logboek-dataverwerkingen-demo

./: .env  .gitignore  Makefile  README.md  docker-compose.yaml
.github/workflows/: build.yaml
apps/currus/: Dockerfile  README.md  go.mod  go.sum  main.go
apps/currus/server/: db.go  lamina.go  logboek.go  server.go
apps/grafana/: README.md  grafana.ini
apps/grafana/provisioning/dashboards/: logboek.yaml
apps/grafana/provisioning/dashboards/logboek/: logboek.json
apps/grafana/provisioning/datasources/: logboek.yaml
apps/lamina/: Dockerfile  README.md  go.mod  go.sum  main.go
apps/lamina/server/: db.go  logboek.go  server.go
apps/munera/: .gitignore  Dockerfile  Makefile  README.md  manage.py  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
apps/munera/assets/: app.js
apps/munera/assets/styles/: _tabler.scss  app.scss
apps/munera/docker/: entrypoint.sh  uwsgi.ini
apps/munera/munera/: __init__.py  admin.py  apps.py  http.py  models.py  remote.py  services.py  settings.py  urls.py  views.py  wsgi.py
apps/munera/munera/locale/nl/LC_MESSAGES/: django.mo  django.po
apps/munera/munera/management/commands/: loadusers.py
apps/munera/munera/migrations/: 0001_initial.py
apps/munera/munera/templates/: index.html  login.html  logout.html  parking_permit_edit.html  parking_permit_list.html
apps/munera/munera/templates/layouts/: base.html
